[package]
name = "dot-trove"
description = "Dotfile management system"
version = "0.2.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/yudjinn/dot-trove"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
dirs-next = "2.0.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
symlink = "0.1.0"
